
  - Some CLI modes don't accept "." as project path
  https://sourceforge.net/p/omegat/bugs/830/

  Localisation Updates:

  - Interlingua localisation updated to 4.0 (UI, documentation, readme, scripts)

----------------------------------------------------------------------
 OmegaT 3.6.0 update 9
----------------------------------------------------------------------
  0 Enhancement
  2 Bug fix
  0 Localisation update
----------------------------------------------------------------------
3.6.0 update 9 vs 3.6.0 update 8

  Bug fixes:

  - The issue from https://sourceforge.net/p/omegat/bugs/884/
could still happen in some cases

  - External TMXs containing entries with no source text prevented
fuzzy match searching from working correctly

----------------------------------------------------------------------
 OmegaT 3.6.0 update 8 (2017-12-27)
----------------------------------------------------------------------
  0 Enhancement
  2 Bug fixes
  0 Localisation update
----------------------------------------------------------------------
3.6.0 update 8 vs 3.6.0 update 7

  Bug fixes:

  - MyMemory machine translation engines were not working anymore

  - Matches from tmx2source appear as fuzzy matches on Windows
    https://sourceforge.net/p/omegat/bugs/884/

----------------------------------------------------------------------
 OmegaT 3.6.0 update 7 (2017-08-08)
----------------------------------------------------------------------
  0 Enhancement
  2 Bug fixes
  0 Localisation update
----------------------------------------------------------------------
3.6.0 update 7 vs 3.6.0 update 6

  Bug fixes:

  - Extra tags not recognised by tag validation
  https://sourceforge.net/p/omegat/bugs/876/

  - CR/LF replaced with LF on LaTex files
  https://sourceforge.net/p/omegat/bugs/865/

----------------------------------------------------------------------
 OmegaT 3.6.0 update 6 (2017-06-26)
----------------------------------------------------------------------